# presidio-research

./: .gitignore  CHANGELOG.md  NOTICE  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_all.txt  setup.py  test-output.xml
.github/workflows/: ci.yml  python-package.yml
.pipelines/: ci.yml  publish-to-pypi.yml
data/: synth_dataset.txt  synth_dataset_v2.json
docs/: evaluation.md  span_evaluation.md  span_matching_strategies.md  token_evaluation.md
docs/evaluator_options/: span_based_approach.md
models/: __init__.py  flair_train.py  spacy_retrain.py  spacy_streamlit.py
notebooks/: 1_Generate_data.ipynb  2_PII_EDA.ipynb  3 Split by pattern #.ipynb  3_Split_by_pattern_#.ipynb  3_Split_by_pattern_number.ipynb  4_Evaluate_Presidio_Analyzer.ipynb  4_Evaluate_Presidio_Analyzer_Span_Level.ipynb  5_Evaluate_Custom_Presidio_Analyzer.ipynb  5_Pseudonymization_demo.ipynb  6_Evaluate_Presidio_with_llmd_dspy.ipynb  Evaluate Presidio Analyzer.ipynb  Evaluate Presidio-API.ipynb  Generate data.ipynb  PII EDA.ipynb  Perturb demo.ipynb  SpanEvaluator_Example.ipynb  Split by pattern #.ipynb  experiment_20221213-145441.json  i2b2-2014-evaluation.ipynb
notebooks/data generation/: CONLL_NER_dataset to synth.ipynb  Generate data.ipynb
notebooks/data modification/: 1-modify_data.ipynb  2-load_data.ipynb
notebooks/evaluator/: 1_Evaluate_Presidio_Analyzer.ipynb
notebooks/models/: CRF.ipynb  Create datasets for Spacy training.ipynb  Evaluate CRF models.ipynb  Evaluate azure text analytics.ipynb  Evaluate flair models.ipynb  Evaluate spacy models.ipynb  Evaluate stanza models.ipynb  Train CRF.ipynb  experiment_20221125-162355.json  notebook_template.md
presidio_evaluator/: __init__.py  crf_evaluator.py  data_objects.py  evaluation_helpers.py  experiment_tracker.py  flair_evaluator.py  model_evaluator.py  presidio_analyzer.py  presidio_analyzer_evaluator.py  presidio_api_evaluator.py  presidio_recognizer_evaluator.py  spacy_evaluator.py  span_to_tag.py  tag_to_span.py  validation.py
presidio_evaluator/data_generator/: README.md  __init__.py  extensions.py  generator.py  generator_new.py  main.py  nationality_generator.py  org_name_generator.py  presidio_data_generator.py  presidio_perturb.py  presidio_pseudonymize.py  presidio_sentence_faker.py  us_driver_license_generator.py
presidio_evaluator/dataset_formatters/: __init__.py  conll_formatter.py  dataset_formatter.py  i2b2_formatter.py  i2c2_formatter.py
presidio_evaluator/evaluation/: __init__.py  base_evaluator.py  evaluation_result.py  evaluator.py  evaluator_objects.py  model_error.py  plotter.py  sample_error.py  scorers.py  skipwords.py  span_error.py  span_evaluation_result.py  span_evaluation_results.py  span_evaluator.py  span_output.py  token_evaluator.py  token_output.py
presidio_evaluator/evaluator_2/: __init__.py  evaluation_helpers.py  evaluation_result.py  evaluator.py  evaluator_objects.py  sample_error.py  span_evaluation_helpers.py
presidio_evaluator/experiment_tracking/: __init__.py  experiment_tracker.py  local_tracker.py
presidio_evaluator/models/: __init__.py  base_model.py  crf_model.py  dspy_recognizer.py  flair_model.py  flair_train.py  presidio_analyzer_wrapper.py  presidio_recognizer_wrapper.py  spacy_model.py  stanza_model.py  text_analytics_wrapper.py
tests/: __init__.py  conftest.py  generated_test.txt  test_base_model.py  test_crf_evaluator.py  test_crf_model.py  test_data_objects.py  test_evaluation_helpers.py  test_evaluation_objects.py  test_evaluation_result.py  test_evaluation_results.py  test_evaluator.py  test_evaluator_objects.py  test_faker_sentences.py  test_flair_evaluator.py  test_flair_model.py  test_generator.py  test_model_error.py  test_model_evaluator.py  test_plotter.py  test_presidio_analyzer.py  test_presidio_analyzer_wrapper.py  test_presidio_perturb.py  test_presidio_pseudonymize.py  test_presidio_sentence_faker.py  test_providers.py  test_recognizers_generated_text.py  test_recognizers_template_csv.py  test_recognizers_template_join_csv.py  test_record_generator.py  test_spacy_evaluator.py  test_spacy_model.py  test_spacy_recognizer_generated_text.py  test_span_evaluator.py  test_span_evaluator2.py  test_span_generator.py  test_span_to_tag.py  test_tag_to_span.py  test_token_evaluator.py  test_validation.py
(+51 files in other folders)
