[tool.poetry]
name = "presidio_evaluator"
version = "0.1.1"
description = ""
authors = ["Microsoft"]
readme = "README.md"
include = [{ path= "presidio_evaluator/data_generator/raw_data/*"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.5.0"
numpy = "^1.22"
pandas = "^2.1.4"
tqdm = "^4.60.0"
faker = "^21.0"
scikit-learn = "^1.3.2"
presidio-analyzer = "^2.2.351"
presidio-anonymizer = "^2.2.351"
requests = "^2.25"
xmltodict = "^0.12.0"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
azure-ai-textanalytics = "^5.3.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz"}

# optional dependencies for the different NLP approaches
datasets = "^3.1.0"
[tool.poetry.group.ner]
optional=true

[tool.poetry.group.ner.dependencies]
flair = "^0.13.0"
spacy_stanza = "^1.0.0"
sklearn_crfsuite = "^0.3.6"
spacy_huggingface_pipelines = "^0.0.4"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.*"
flake8 = ">=3.*"
pytest-azurepipelines = "^1.0.5"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
