[tool.poetry]
name = "presidio_evaluator"
version = "0.2.3"
description = ""
authors = ["Microsoft"]
readme = "README.md"
license = "MIT"
include = [{ path= "presidio_evaluator/data_generator/raw_data/*"}]


[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.8.0"
pandas = "^2.1.4"
tqdm = "^4.60.0"
faker = "^21.0"
scikit-learn = "^1.3.2"
presidio-analyzer = "^2.2.351"
presidio-anonymizer = "^2.2.351"
requests = "^2.25"
xmltodict = "^0.12.0"
python-dotenv = "^1.0.0"
plotly= "^5.24.0"

# optional dependencies for the different NLP approaches
[tool.poetry.group.ner]
optional=true

[tool.poetry.group.ner.dependencies]
flair = "^0.14.0"
spacy_stanza = "^1.0.0"
spacy_huggingface_pipelines = "^0.0.4"
azure-ai-textanalytics = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.*"
ruff = "^0.8"
pytest-azurepipelines = "^1.0.5"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "tests"]

[tool.ruff.lint]
ignore = ["E203", "D100", "D202"]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "inconclusive: marks tests as those that may sometimes fail due to threshold",
    "none: regular tests",
    "serial"
]
# Uncomment the following lines to enable logging during test debugging.
# log_cli = true
# log_level = "DEBUG"

filterwarnings = [
    "ignore::DeprecationWarning"
]
